--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix",
+    "seed": "curl -X POST http://localhost:3000/api/seeds",
+    "create:seed": "concurrently \"pnpm run dev\" \"sleep 5 && npm run seed\"",
+    "clear": "curl -X POST http://localhost:3000/api/seeds/clear",
+    "clear:bdd": "concurrently \"pnpm run dev\" \"sleep 5 && npm run clear\""
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -17,6 +21,7 @@
     "@radix-ui/react-toast": "^1.1.4",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -24,6 +29,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.4.7",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "jsonwebtoken": "^9.0.2",
@@ -39,7 +45,12 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
+  },
+  "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
