--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint --fix",
     "seed": "curl -X POST http://localhost:3000/api/seeds",
     "clear": "curl -X POST http://localhost:3000/api/seeds/clear",
-    "clear:bdd": "concurrently \"pnpm run dev\" \"sleep 5 && npm run clear\""
+    "clear:bdd": "concurrently \"pnpm run dev\" \"sleep 5 && npm run clear\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
@@ -37,7 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.274.0",
     "mongoose": "^7.5.0",
-    "next": "13.4.19",
+    "next": "^15.1.6",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
@@ -53,6 +56,14 @@
   },
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
+    "concurrently": "^9.1.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "mongodb-memory-server": "^10.1.3",
+    "node-fetch": "^2.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
