--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
